<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view1"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:elevation="20dp"
        android:background="@color/colorPrimary"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/first_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView4"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:src="@drawable/italian" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/first_layout">

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/textheader1"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView3"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/textbody1" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view2"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_view1">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/second_layout"
                android:layout_width="wrap_content"
                android:layout_centerVertical="true"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:src="@drawable/lake" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/second_layout">

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="@string/textheader2"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/textView6"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/textbody2" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view3"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@id/card_view2"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/third_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView6"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:contentDescription="TODO"
                    android:src="@drawable/sail" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/third_layout">

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/textheader3"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView8"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/textbody3" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/card_view4"
        android:layout_width="match_parent"
        android:layout_marginTop="20dp"
        android:layout_below="@id/card_view3"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/fourth_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView7"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_weight="1"
                    android:layout_centerVertical="true"
                    android:contentDescription="TODO"
                    android:src="@drawable/golf" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@+id/fourth_layout">

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10sp"
                    android:layout_centerHorizontal="true"
                    android:text="@string/textheader4"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/textView10"
                    android:layout_marginStart="10sp"
                    android:layout_marginTop="10dp"
                    android:text="@string/textbody4" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="100dp"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                </RelativeLayout>
            </LinearLayout>
        </RelativeLayout>
    </androidx.cardview.widget.CardView>
    <!--    <androidx.cardview.widget.CardView-->
    <!--        android:layout_width="match_parent"-->
    <!--        android:layout_height="200dp"-->
    <!--        android:layout_marginTop="172dp"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:layout_editor_absoluteX="0dp">-->

    <!--        <RelativeLayout-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent">-->

    <!--            <LinearLayout-->
    <!--                android:layout_marginLeft="250dp"-->
    <!--                android:layout_width="match_parent"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:orientation="horizontal">-->

    <!--                <ImageView-->
    <!--                    android:id="@+id/imageView3"-->
    <!--                    android:layout_width="100dp"-->
    <!--                    android:layout_height="100dp"-->
    <!--                    android:layout_weight="1"-->
    <!--                    android:contentDescription="TODO"-->
    <!--                    android:src="@drawable/google" />-->
    <!--            </LinearLayout>-->

    <!--            <LinearLayout-->
    <!--                android:layout_width="250dp"-->
    <!--                android:layout_height="match_parent"-->
    <!--                android:orientation="vertical">-->

    <!--                <TextView-->
    <!--                    android:id="@+id/textView2"-->
    <!--                    android:layout_width="match_parent"-->
    <!--                    android:layout_height="wrap_content"-->
    <!--                    android:text="TextView" />-->
    <!--            </LinearLayout>-->
    <!--        </RelativeLayout>-->
    <!--    </androidx.cardview.widget.CardView>-->

</RelativeLayout>